--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3.9 (3.9.13-1) UNRELEASED; urgency=medium
+
+  * Jenkinsized
+
+ -- vitex <info@vitexsoftware.cz>  Mon, 30 May 2022 22:51:26 +0200
+
 python3.9 (3.9.13-1+jammy1) jammy; urgency=medium
 
   * Python 3.9.13 release.
